# ogen

./: .bazelrc  .gitignore  .goreleaser.yml  BUILD.bazel  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  bls.BUILD  bls.bzl  config.example.toml  deps.bzl  dummy.go  go.mod  go.sum  main.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  builder.yml  codeql-analysis.yml  docker-images.yml  ogen.yml  test.yml
api/proto/: chain.pb.go  chain.pb.gw.go  chain_grpc.pb.go  common.pb.go  consensus.pb.go  indexer.pb.go  (+20 more)
bdb/: BUILD.bazel  Makefile  blocknode.go  blocknode_encoding.go  blocknodedisk.go  blocknodedisk_encoding.go  blocknodedisk_test.go  state.go
bdb/mock/: BUILD.bazel  memory.go
bloom/: BUILD.bazel  bloom.go  bloom_test.go
bls/: BUILD.bazel  Makefile  bls_test.go  combined.go  combined_signature.go  combined_signature_encoding.go  combined_test.go  interface.go  interface_test.go  multisig.go  multisig_encoding.go  multisig_test.go  publickey.go  publickey_test.go  secretkey.go  signature.go  signature_test.go
chain/: BUILD.bazel  blockchain.go  chain.go  chainview.go  consensus.go  consensus_test.go  database.go  locator.go  notifee.go  processor.go  processor_test.go  state.go  validations.go
chain/index/: BUILD.bazel  blocks.go  blocks_test.go  common.go  gov.go  txs.go  txs_test.go  users.go  utxo.go  workers.go
chainrpc/: BUILD.bazel  certs.go  certs_test.go  chain.go  client.go  network.go  rpc.go  server.go  utils.go  validators.go  wallet.go
chainrpc/ogen-protojs/: package-lock.json  package.json
chainrpc/proto/: BUILD.bazel  chain.pb.go  chain.pb.gw.go  chain.proto  common.pb.go  common.proto  network.pb.go  network.pb.gw.go  network.proto  utils.pb.go  utils.pb.gw.go  utils.proto  validators.pb.go  validators.pb.gw.go  validators.proto  wallet.pb.go  wallet.pb.gw.go
cli/: BUILD.bazel  blockchain.go  cli.go  cli_test.go  combinechain.go  createwallet.go  generatechainfile.go  generatekeys.go  reset.go  wallet.go
cli/rpcclient/: BUILD.bazel  chain.go  cli.go  cli_test.go  client.go  network.go  utils.go  validators.go  wallet.go
cli/wallet/: cli.go
config/: BUILD.bazel  appdata.go  chainfile.go  config.go  signal.go
contrib/: Makefile
csmt/: .gitignore  bbolt.go  bbolt_test.go  cache.go  cache_test.go  csmt.go  csmt_test.go  database.go  memory.go  memory_test.go  witness.go
explorer/: explorer.go
gov/: gov.go  models.go  models_test.go
gui/: main.go
keystore/: BUILD.bazel  keys.go  keys_test.go  keystore.go  keystore_test.go  validator.go
logger/: buffer.go
mempool/: BUILD.bazel  actions.go  coins.go  coins_test.go  mempool.go  votes.go
miner/: BUILD.bazel  mempool.go  miner.go
p2p/: BUILD.bazel  Makefile  blockheader.go  blockheader_test.go  message.go  message_encoding.go  msg_addr.go  msg_addr_encoding.go  msg_block.go  msg_block_encoding.go  msg_block_test.go  msg_blockinv.go  msg_getaddr.go  msg_getaddr_encoding.go  msg_getblocks.go  msg_getblocks_encoding.go  msg_ping.go  msg_pong.go  msg_precommit.go  msg_prevote.go  msg_proposal.go  msg_test.go  msg_tx.go  msg_tx_encoding.go  msg_tx_test.go  msg_verack.go  msg_version.go  msg_version_encoding.go  msg_vote.go  protocol.go  read-message.go  write-message.go
packrd/: packed-packr.go
params/: BUILD.bazel  params.go  params_test.go
peers/: BUILD.bazel  README.md  database.go  database_test.go  discoveryprotocol.go  errors.go  hostnode.go  hostnode_test.go  mempool.go  peer.go  peersman.go  protocolhandler.go  syncprotocol.go
peers/conflict/: lastaction.go  lastaction_encoding.go  lastaction_test.go
peers/peer/: errors.go  peer.go
primitives/: BUILD.bazel  Makefile  block.go  block_encoding.go  block_test.go  blockheader.go  blockheader_encoding.go  blockheader_test.go  blocktransition.go  blocktransition_test.go  coins.go  coins_encoding.go  coins_state.go  coins_state_encoding.go  coins_state_test.go  deposit.go  deposit_encoding.go  epochtransition.go  epochtransition_encoding.go  exit.go  exit_encoding.go  genesis.go  governance.go  governance_encoding.go  governance_state.go  governance_state_test.go  governance_test.go  initialization.go  initialization_test.go  primitives_test.go  slashing.go  slashing_encoding.go  slashing_test.go  slottransition.go  state.go  state_encoding.go  state_test.go  tx.go  tx_encoding.go  tx_test.go  (+14 more)
proofs/: BUILD.bazel  burn.go  burn_test.go
proofs/cmd/: BUILD.bazel  main.go
proposer/: proposer.go  proposer_test.go
proto/: .gitignore  BUILD.bazel  Makefile  chain.pb.go  chain.pb.gw.go  chain.proto  common.pb.go  common.proto  network.pb.go  network.pb.gw.go  network.proto  rpc.md  utils.pb.go  utils.pb.gw.go  utils.proto  validators.pb.go  validators.pb.gw.go  validators.proto  wallet.pb.go  wallet.pb.gw.go  wallet.proto
proto/google/api/: BUILD.bazel
proto/google/rpc/: BUILD.bazel
research/: Reward Notebook.ipynb
scripts/: build-cross-sign.sh  build-cross.sh  build-docker.sh  build.sh  install.sh  mock-gen.sh  packr-gen.sh  protoc-gen.sh  ssz-gen.sh
server/: BUILD.bazel  server.go
state/: state.go  state_test.go
test/: Makefile  bdb.go  blocks.go  deposit.go  epoch.go  exit.go  fuzzer.go  governance.go  keys.go  msg.go  params.go  slashing.go  state.go  tx.go  validator.go  votes.go
tools/: Dockerfile  clang_cross.sh  libp2p_tls.patch  osxcross.sh
transitions/: slottransition.go
txs/: README.md
users/: models.go  users.go
utils/: README.md
utils/bip32/: BUILD.bazel  README.md  bip32.go  bip32_test.go  fixtures_test.go
utils/bip39/: BUILD.bazel  bip39.go  bip39_test.go
utils/bip39/words/: BUILD.bazel  README.md  chinese_traditional.go  french.go  korean.go  spanish.go
utils/chainhash/: BUILD.bazel  hash.go  hash_test.go  hashfunc.go
utils/serializer/: BUILD.bazel  common.go  hash.go  netaddress.go  read-elements.go  write-elements.go
wallet/: BUILD.bazel  coins.go  database.go  encryption.go  initialization.go  validator.go  wallet.go  wallet_test.go
workers/: models.go  workers.go
(+858 files in other folders)
