load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/olympus-protocol/ogen
# gazelle:proto disable
gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/olympus-protocol/ogen",
    visibility = ["//visibility:private"],
    deps = [
        "//cli:go_default_library",
        "//utils/logger:go_default_library",
    ],
)

go_binary(
    name = "ogen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
