load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blocknodedisk.go",
        "state.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/bdb",
    visibility = ["//visibility:public"],
    deps = [
        "//params:go_default_library",
        "//primitives:go_default_library",
        "//utils/chainhash:go_default_library",
        "//utils/logger:go_default_library",
        "//utils/serializer:go_default_library",
        "@com_github_dgraph_io_badger//:go_default_library",
    ],
)
