load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bloom.go"],
    importpath = "github.com/olympus-protocol/ogen/bloom",
    visibility = ["//visibility:public"],
    deps = ["//utils/chainhash:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["bloom_test.go"],
    embed = [":go_default_library"],
    deps = ["//utils/chainhash:go_default_library"],
)
