load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "blockchain.go",
        "chain.go",
        "chainview.go",
        "database.go",
        "locator.go",
        "notifee.go",
        "processor.go",
        "state.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/chain",
    visibility = ["//visibility:public"],
    deps = [
        "//bdb:go_default_library",
        "//bls:go_default_library",
        "//chain/index:go_default_library",
        "//params:go_default_library",
        "//primitives:go_default_library",
        "//utils/chainhash:go_default_library",
        "//utils/logger:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["processor_test.go"],
    embed = [":go_default_library"],
)
