load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chain.go",
        "network.go",
        "server.go",
        "utils.go",
        "validators.go",
        "wallet.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/chainrpc",
    visibility = ["//visibility:public"],
    deps = [
        "//bls:go_default_library",
        "//chain:go_default_library",
        "//chain/index:go_default_library",
        "//keystore:go_default_library",
        "//params:go_default_library",
        "//peers:go_default_library",
        "//primitives:go_default_library",
        "//utils/bech32:go_default_library",
        "//utils/chainhash:go_default_library",
        "//utils/logger:go_default_library",
        "//utils/serializer:go_default_library",
        "//wallet:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_pubsub//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_shopspring_decimal//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
