load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blockchain.go",
        "cli.go",
        "combinechain.go",
        "createwallet.go",
        "generatechainfile.go",
        "generatekeys.go",
        "reset.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//bdb:go_default_library",
        "//cli/rpcclient:go_default_library",
        "//config:go_default_library",
        "//keystore:go_default_library",
        "//params:go_default_library",
        "//primitives:go_default_library",
        "//server:go_default_library",
        "//utils/chainhash:go_default_library",
        "//utils/logger:go_default_library",
        "//wallet:go_default_library",
        "@com_github_dgraph_io_badger//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@com_github_multiformats_go_multiaddr_net//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
