load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chainfile.go",
        "config.go",
        "signal.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/config",
    visibility = ["//visibility:public"],
    deps = [
        "//primitives:go_default_library",
        "//utils/logger:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
    ],
)
