load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "keystore.go",
        "validator.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/keystore",
    visibility = ["//visibility:public"],
    deps = [
        "//bls:go_default_library",
        "//utils/logger:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)
