load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "discoveryprotocol.go",
        "errors.go",
        "hostnode.go",
        "protocolhandler.go",
        "syncprotocol.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/peers",
    visibility = ["//visibility:public"],
    deps = [
        "//chain:go_default_library",
        "//p2p:go_default_library",
        "//primitives:go_default_library",
        "//utils/chainhash:go_default_library",
        "//utils/logger:go_default_library",
        "//utils/serializer:go_default_library",
        "@com_github_libp2p_go_libp2p//:go_default_library",
        "@com_github_libp2p_go_libp2p_core//crypto:go_default_library",
        "@com_github_libp2p_go_libp2p_core//discovery:go_default_library",
        "@com_github_libp2p_go_libp2p_core//host:go_default_library",
        "@com_github_libp2p_go_libp2p_core//network:go_default_library",
        "@com_github_libp2p_go_libp2p_core//peer:go_default_library",
        "@com_github_libp2p_go_libp2p_core//protocol:go_default_library",
        "@com_github_libp2p_go_libp2p_peerstore//pstoremem:go_default_library",
        "@com_github_libp2p_go_libp2p_pubsub//:go_default_library",
        "@com_github_multiformats_go_multiaddr//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)
