load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "block.go",
        "blockheader.go",
        "blocktransition.go",
        "coins_state.go",
        "deposit.go",
        "epochtransition.go",
        "exit.go",
        "genesis.go",
        "governance.go",
        "initialization.go",
        "slashing.go",
        "slottransition.go",
        "state.go",
        "tx.go",
        "validator_state.go",
        "votes.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/primitives",
    visibility = ["//visibility:public"],
    deps = [
        "//bls:go_default_library",
        "//params:go_default_library",
        "//utils/bech32:go_default_library",
        "//utils/bitfield:go_default_library",
        "//utils/chainhash:go_default_library",
        "//utils/logger:go_default_library",
        "//utils/serializer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "block_test.go",
        "blockheader_test.go",
        "blocktransition_test.go",
        "coins_state_test.go",
        "state_test.go",
        "tx_test.go",
        "validator_state_test.go",
        "votes_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//bls:go_default_library",
        "@com_github_go_test_deep//:go_default_library",
    ],
)
