load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["burn.go"],
    importpath = "github.com/olympus-protocol/ogen/proofs",
    visibility = ["//visibility:public"],
    deps = [
        "//utils/chainhash:go_default_library",
        "@com_github_btcsuite_btcd//txscript:go_default_library",
        "@com_github_btcsuite_btcd//wire:go_default_library",
    ],
)
