load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_proto",
    srcs = [
        "chain.proto",
        "common.proto",
        "network.proto",
        "utils.proto",
        "validators.proto",
        "wallet.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:root_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/olympus-protocol/ogen/chainrpc/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":proto_go_proto"],
    importpath = "github.com/olympus-protocol/ogen/chainrpc/proto",
    visibility = ["//visibility:public"],
)
