load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/olympus-protocol/ogen/server",
    visibility = ["//visibility:public"],
    deps = [
        "//bdb:go_default_library",
        "//chain:go_default_library",
        "//chainrpc:go_default_library",
        "//config:go_default_library",
        "//keystore:go_default_library",
        "//mempool:go_default_library",
        "//miner:go_default_library",
        "//params:go_default_library",
        "//peers:go_default_library",
        "//primitives:go_default_library",
        "//utils/logger:go_default_library",
        "//wallet:go_default_library",
    ],
)
