load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["blocks.go"],
    importpath = "github.com/olympus-protocol/ogen/chain/index",
    visibility = ["//visibility:public"],
    deps = [
        "//bdb:go_default_library",
        "//primitives:go_default_library",
        "//utils/chainhash:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["blocks_test.go"],
    embed = [":go_default_library"],
)
