load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chain.pb.go",
        "chain.pb.gw.go",
        "common.pb.go",
        "network.pb.go",
        "network.pb.gw.go",
        "utils.pb.go",
        "utils.pb.gw.go",
        "validators.pb.go",
        "validators.pb.gw.go",
        "wallet.pb.go",
        "wallet.pb.gw.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/chainrpc/proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
