load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chain.go",
        "cli.go",
        "client.go",
        "network.go",
        "utils.go",
        "validators.go",
        "wallet.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/cli/rpcclient",
    visibility = ["//visibility:public"],
    deps = [
        "//bls:go_default_library",
        "@com_github_c_bata_go_prompt//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
