load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bip39.go"],
    importpath = "github.com/olympus-protocol/ogen/utils/bip39",
    visibility = ["//visibility:public"],
    deps = [
        "//utils/bip39/words:go_default_library",
        "@org_golang_x_crypto//pbkdf2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bip39_test.go"],
    embed = [":go_default_library"],
    deps = ["//utils/bip39/words:go_default_library"],
)
