load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "hash.go",
        "hashfunc.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/utils/chainhash",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_crypto//ripemd160:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "hash_test.go",
        "hashfunc_test.go",
    ],
    embed = [":go_default_library"],
)
