load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "netaddress.go",
        "read-elements.go",
        "write-elements.go",
    ],
    importpath = "github.com/olympus-protocol/ogen/utils/serializer",
    visibility = ["//visibility:public"],
    deps = ["//utils/chainhash:go_default_library"],
)
